--- a/public/frontend/app/styles/_colors.scss
+++ b/public/frontend/app/styles/_colors.scss
@@ -6,5 +6,5 @@ $palette: (
 );
 
 $TopBarBG: map_get($palette, grey1);
-
 $button-hover: map_get($palette, beige1);
+$error: darken(map_get($palette, pink1), 50%);
