--- a/public/frontend/app/styles/_common.scss
+++ b/public/frontend/app/styles/_common.scss
@@ -4,7 +4,7 @@ html{
 }
 body {
   background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
   margin: 0;
   height: 100%;
