signup page half done.

--- a/public/frontend/app/styles/TopBar.scss
+++ b/public/frontend/app/styles/TopBar.scss
@@ -22,7 +22,7 @@
     display: flex;
     font-size: 2rem;
     justify-content: space-between;
-    .signup, .login, a{
+    .signup, .login, .button{
       cursor: pointer;
       text-decoration: none;
       padding: 10px;
