--- a/public/frontend/app/styles/_common.scss
+++ b/public/frontend/app/styles/_common.scss
@@ -22,3 +22,10 @@ body {
   color: #000;
   padding: 0.2em 0;
 }
+
+.Page{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
