signup page working now.

--- a/public/frontend/app/styles/main.scss
+++ b/public/frontend/app/styles/main.scss
@@ -3,6 +3,7 @@ $icon-font-path: "../fonts/";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap";
 @import 'TopBar.scss';
 @import 'SignupPage.scss';
+@import 'UserManagementPage.scss';
 @import '_common.scss';
 .browsehappy {
     margin: 0.2em 0;
