--- a/public/frontend/app/styles/TopBar.scss
+++ b/public/frontend/app/styles/TopBar.scss
@@ -18,7 +18,7 @@
       background-repeat: no-repeat;
     }
   }
-  .user-action{
+  .user-action, .manager-user, .user-profile{
     display: flex;
     font-size: 2rem;
     justify-content: space-between;
@@ -31,6 +31,20 @@
       &:hover{
         font-weight: bold;
         background-color: $button-hover;
+      }
+      &.logout{
+        font-size: 1.5rem;
+      }
+      &.manage-users{
+        margin-left: 3rem;
+        font-size:1.5rem;
+      }
+    }
+    .username{
+      display: flex;
+      align-items: center;
+      .hello{
+        margin-right: 0.6rem;
       }
     }
   }
