--- a/public/frontend/app/styles/_common.scss
+++ b/public/frontend/app/styles/_common.scss
@@ -24,8 +24,9 @@ body {
 }
 
 .Page{
-  height: 100%;
   width: 100%;
+  margin-top: 3rem;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
