--- a/public/frontend/app/styles/main.scss
+++ b/public/frontend/app/styles/main.scss
@@ -4,6 +4,9 @@ $icon-font-path: "../fonts/";
 @import 'TopBar.scss';
 @import 'SignupPage.scss';
 @import 'UserManagementPage.scss';
+@import 'ProjectsPage';
+@import 'OfflineSearchList';
+@import 'UserSelectBar';
 @import '_common.scss';
 .browsehappy {
     margin: 0.2em 0;
