--- a/public/frontend/app/styles/_colors.scss
+++ b/public/frontend/app/styles/_colors.scss
@@ -10,7 +10,7 @@ $palette: (
 $TopBarBG: map_get($palette, grey1);
 $button-hover: map_get($palette, beige1);
 $error: darken(map_get($palette, pink1), 50%);
-
+$border-color-grey: map_get($palette, grey1);
 $cancel-button: map_get($palette, grey1);
 $cancel-button-hover: darken($cancel-button, 30%);
 $action-button: map_get($palette, orange1);
