--- a/public/frontend/app/styles/main.scss
+++ b/public/frontend/app/styles/main.scss
@@ -10,6 +10,7 @@ $icon-font-path: "../fonts/";
 @import 'ViewProjectsList.scss';
 @import 'HomePage.scss';
 @import 'ViewProjectPage.scss';
+@import 'EditProjectPage';
 @import '_common.scss';
 .browsehappy {
     margin: 0.2em 0;
