--- a/public/frontend/app/styles/main.scss
+++ b/public/frontend/app/styles/main.scss
@@ -1,5 +1,4 @@
 $icon-font-path: "../fonts/";
-
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap";
 @import 'TopBar.scss';
 @import 'SignupPage.scss';
@@ -11,7 +10,10 @@ $icon-font-path: "../fonts/";
 @import 'HomePage.scss';
 @import 'ViewProjectPage.scss';
 @import 'EditProjectPage';
+@import 'ViewUserPage.scss';
+@import 'EditUserPage.scss';
 @import '_common.scss';
+@import 'react-datetime.css';
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
