--- a/public/frontend/app/styles/ViewProjectsList.scss
+++ b/public/frontend/app/styles/ViewProjectsList.scss
@@ -5,8 +5,11 @@
   display: flex;
   flex-wrap: wrap;
   .project{
+    font-size: 1.5rem;
     margin: 20px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
     width: 200px;
     height: 200px;
     cursor: pointer;
@@ -25,8 +28,31 @@
       text-overflow: ellipsis;
     }
     .place{
-      font-size: 1rem;
+      font-size: 1.3rem;
       font-style: italic;
     }
+    .grow{
+      flex-grow:1;
+      min-height: 1px;
+    }
+    .text{
+      align-self: center;
+    }
+    .raised{
+      font-size: 3rem;
+      font-weight: bold;
+      align-self: center;
+      .text{
+        font-size: 1.4rem;
+        font-style: italic;
+        font-weight: 400;
+        margin-right: 0.5rem;
+        font-size: 2rem;
+      }
+    }
+    .days{
+      align-self:center;
+    }
+
   }
 }
