start fund handling.

--- a/public/frontend/app/styles/main.scss
+++ b/public/frontend/app/styles/main.scss
@@ -13,6 +13,7 @@ $icon-font-path: "../fonts/";
 @import 'ViewUserPage.scss';
 @import 'EditUserPage.scss';
 @import '_common.scss';
+@import 'FundingSidebar';
 @import 'react-datetime.css';
 .browsehappy {
     margin: 0.2em 0;
