--- a/public/frontend/app/styles/main.scss
+++ b/public/frontend/app/styles/main.scss
@@ -14,6 +14,7 @@ $icon-font-path: "../fonts/";
 @import 'EditUserPage.scss';
 @import '_common.scss';
 @import 'FundingSidebar';
+@import 'FundProjectPage.scss';
 @import 'react-datetime.css';
 .browsehappy {
     margin: 0.2em 0;
