--- a/public/frontend/app/styles/main.scss
+++ b/public/frontend/app/styles/main.scss
@@ -15,6 +15,7 @@ $icon-font-path: "../fonts/";
 @import '_common.scss';
 @import 'FundingSidebar';
 @import 'FundProjectPage.scss';
+@import 'BrowseProjectsPage.scss';
 @import 'react-datetime.css';
 .browsehappy {
     margin: 0.2em 0;
