--- a/public/frontend/app/styles/TopBar.scss
+++ b/public/frontend/app/styles/TopBar.scss
@@ -12,7 +12,7 @@
     .logo-mount {
       height: 7rem;
       width: 7rem;
-      //background-image: url('../images/logo.png');
+      background-image: url('../images/logo.png');
       background-size: contain;
       background-position: center center;
       background-repeat: no-repeat;
