--- a/public/frontend/app/styles/TopBar.scss
+++ b/public/frontend/app/styles/TopBar.scss
@@ -32,7 +32,7 @@
         font-weight: bold;
         background-color: $button-hover;
       }
-      &.logout, &.projects{
+      &.logout, &.projects, &.user{
         font-size: 1.5rem;
       }
       &.manage-users{
